feat: added personnel swagger doc.
