# swagger.json
@@ -30,19 +30,26 @@
   "paths": {
     "/auth/login": {
       "post": {
-        "description": "",
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "Login",
+        "description": "Login with username and password",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "username": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "testF0"
                 },
                 "password": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "1234"
                 }
               }
             }
@@ -55,96 +62,27 @@
         }
       }
     },
-    "/tokens/": {
+    "/auth/logout": {
       "get": {
-        "description": "",
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "Logout",
+        "description": "Delete Token",
         "responses": {
           "200": {
             "description": "OK"
-          }
-        }
-      },
-      "post": {
-        "description": "",
-        "responses": {
-          "201": {
-            "description": "Created"
-          }
-        }
-      }
-    },
-    "/tokens/{id}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "202": {
-            "description": "Accepted"
-          }
-        }
-      },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      },
-      "patch": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "202": {
-            "description": "Accepted"
           }
         }
       }
     },
     "/personnels/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "List Personnels",
+        "description": "  You can send query with endpoint for search[], sort[], page and limit.  <ul> Examples:  <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>  <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>  <li>URL/?<b>page=2&limit=1</b></li>  </ul>  ",
         "responses": {
           "200": {
             "description": "OK"
@@ -152,16 +90,74 @@
         }
       },
       "post": {
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Personnels",
         "description": "",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "departmentId": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "6607dc9ffd4b6f7b026c3efb"
+                },
+                "username": {
+                  "type": "string",
+                  "example": "test"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "1234l@ldKD"
+                },
+                "firstName": {
+                  "type": "string",
+                  "example": "test"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "test"
+                },
+                "phone": {
+                  "type": "string",
+                  "example": "0566587621"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "test@test.com"
+                },
+                "title": {
+                  "type": "string",
+                  "example": "Frontend Developer"
+                },
+                "salary": {
+                  "type": "number",
+                  "example": 50000
+                },
+                "description": {
+                  "type": "string",
+                  "example": "Test Personnel"
+                },
+                "isActive": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "isAdmin": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "isLead": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "startedAt": {
+                  "type": "string",
+                  "example": "2023-10-15 13:14:15"
                 }
               }
             }
@@ -176,6 +172,10 @@
     },
     "/personnels/{id}": {
       "get": {
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Get SinglePersonnel",
         "description": "",
         "parameters": [
           {
@@ -192,6 +192,10 @@
         }
       },
       "put": {
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Update Personnel",
         "description": "",
         "parameters": [
           {
@@ -203,17 +207,65 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "isAdmin": {
-                  "example": "any"
+                "departmentId": {
+                  "type": "string",
+                  "example": "6607dc9ffd4b6f7b026c3efb"
                 },
-                "req": {
-                  "example": "any"
+                "username": {
+                  "type": "string",
+                  "example": "test"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "1234l@ldKD"
+                },
+                "firstName": {
+                  "type": "string",
+                  "example": "test"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "test"
+                },
+                "phone": {
+                  "type": "string",
+                  "example": "0566587621"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "test@test.com"
+                },
+                "title": {
+                  "type": "string",
+                  "example": "Frontend Developer"
                 },
                 "salary": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 50000
+                },
+                "description": {
+                  "type": "string",
+                  "example": "Test Personnel"
+                },
+                "isActive": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "isAdmin": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "isLead": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "startedAt": {
+                  "type": "string",
+                  "example": "2023-10-15 13:14:15"
                 }
               }
             }
@@ -226,6 +278,10 @@
         }
       },
       "delete": {
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Delete Personnel",
         "description": "",
         "parameters": [
           {
@@ -245,6 +301,10 @@
         }
       },
       "patch": {
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Update Personnel",
         "description": "",
         "parameters": [
           {
@@ -256,17 +316,65 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "isAdmin": {
-                  "example": "any"
+                "departmentId": {
+                  "type": "string",
+                  "example": "6607dc9ffd4b6f7b026c3efb"
                 },
-                "req": {
-                  "example": "any"
+                "username": {
+                  "type": "string",
+                  "example": "test"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "1234l@ldKD"
+                },
+                "firstName": {
+                  "type": "string",
+                  "example": "test"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "test"
+                },
+                "phone": {
+                  "type": "string",
+                  "example": "0566587621"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "test@test.com"
+                },
+                "title": {
+                  "type": "string",
+                  "example": "Frontend Developer"
                 },
                 "salary": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 50000
+                },
+                "description": {
+                  "type": "string",
+                  "example": "Test Personnel"
+                },
+                "isActive": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "isAdmin": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "isLead": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "startedAt": {
+                  "type": "string",
+                  "example": "2023-10-15 13:14:15"
                 }
               }
             }
@@ -281,7 +389,11 @@
     },
     "/departments/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Departments"
+        ],
+        "summary": "List Departments",
+        "description": "  You can send query with endpoint for search[], sort[], page and limit.  <ul> Examples:  <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>  <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>  <li>URL/?<b>page=2&limit=1</b></li>  </ul>  ",
         "responses": {
           "200": {
             "description": "OK"
@@ -289,7 +401,27 @@
         }
       },
       "post": {
+        "tags": [
+          "Departments"
+        ],
+        "summary": "Create Department",
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Test Department"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -299,6 +431,10 @@
     },
     "/departments/{id}": {
       "get": {
+        "tags": [
+          "Departments"
+        ],
+        "summary": "Get Single Department",
         "description": "",
         "parameters": [
           {
@@ -315,6 +451,10 @@
         }
       },
       "put": {
+        "tags": [
+          "Departments"
+        ],
+        "summary": "Update Department",
         "description": "",
         "parameters": [
           {
@@ -322,6 +462,20 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Test Department"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -331,6 +485,10 @@
         }
       },
       "delete": {
+        "tags": [
+          "Departments"
+        ],
+        "summary": "Delete Department",
         "description": "",
         "parameters": [
           {
@@ -350,6 +508,10 @@
         }
       },
       "patch": {
+        "tags": [
+          "Departments"
+        ],
+        "summary": "Update Department",
         "description": "",
         "parameters": [
           {
@@ -357,6 +519,20 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Test Department"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -368,6 +544,10 @@
     },
     "/departments/{id}/personnels": {
       "get": {
+        "tags": [
+          "Departments"
+        ],
+        "summary": "Personnels of Department",
         "description": "",
         "parameters": [
           {
@@ -678,7 +858,7 @@
             },
             "default": {
               "type": "number",
-              "example": 1711833212172
+              "example": 1713360701281
             }
           }
         }
